# ball_launcher_beepy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ball_launcher.proto  package.xml  readme.md  setup.py
ball_launcher/: ball_launcher_client.py  ball_launcher_control.py  ball_launcher_server.py
examples/: CMakeLists.txt  extreme_orientations.py  extreme_settings.py  launch_ball.cpp  launch_ball.py  launch_ball_from_client.py  launch_ball_from_server.py  random_balls.py  run_gui.py  run_server.py
include/: ball_launcher_client.hpp
include/ball_launcher_beepy/: ball_launcher_client.hpp
misc/: server_message.bash
python/ball_launcher_beepy/: __init__.py  ball_launcher.py  ball_launcher_client.py  ball_launcher_control.py  ball_launcher_gui.py  ball_launcher_pb2.py  ball_launcher_server.py
src/: ball_launcher_client.cpp
tests/: extreme_orientations.py  extreme_settings.py  launch_ball.cpp  launch_ball_from_client.py  random_balls.py  run_server.py
