<?xml version="1.0"?>
<package>
  <name>ball_launcher_beepy</name>
  <version>1.0.0</version>
  <description>ZeroMq customized ball launcher</description>
  <author email="nico.guertler@tuebingen.mpg.de">Nico Guertler</author>
  <maintainer email="nico.guertler@tuebingen.mpg.de">Nico Guertler</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
